--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -2,7 +2,7 @@
   padding-top: 122px;
   padding-bottom: 98px;
   background-color: #ffffff;
-  @media screen and (min-width: 320px) and (max-width: 767px) {
+  @media screen and (min-width: 480px) and (max-width: 767px) {
     width: 320px;
   }
   @media screen and (min-width: 768px) {
@@ -10,7 +10,7 @@
     padding-bottom: 112px;
   }
   @media screen and (min-width: 1280px) {
-    width: 1200px;
+    width: 100%;
     padding-top: 127px;
     padding-bottom: 119px;
   }
@@ -25,7 +25,7 @@
   text-align: center;
   text-transform: uppercase;
   color: #ffa5ba;
-  @media screen and (min-width: 320px) {
+  @media screen and (min-width: 480px) {
     width: 320;
   }
   @media screen and (min-width: 768px) {
@@ -50,7 +50,7 @@
   text-align: center;
   text-transform: uppercase;
   color: #d41443;
-  @media screen and (min-width: 320px) {
+  @media screen and (min-width: 480px) {
     width: 100%;
   }
   @media screen and (min-width: 768px) {
@@ -106,7 +106,7 @@
     transform: translate(-50%, -50%);
     font-size: 15px;
     letter-spacing: 4px;
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1280px) {
       top: 60px;
     }
   }
@@ -138,13 +138,13 @@
     (min-resolution: 2dppx) {
     background-image: url(../images/ice-cream2x2-min.png);
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1280px) {
     top: -220px;
     width: 335px;
     height: 335px;
     background-image: url(../images/ice-cream3x1-min.png);
   }
-  @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
+  @media screen and (min-width: 1280px) and (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     background-image: url(../images/ice-cream3x2-min.png);
@@ -177,13 +177,13 @@
     (min-resolution: 2dppx) {
     background-image: url(../images/coffee2x2-min.png);
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1280px) {
     top: -220px;
     width: 335px;
     height: 335px;
     background-image: url(../images/coffee3x1-min.png);
   }
-  @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
+  @media screen and (min-width: 1280px) and (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     background-image: url(../images/coffee3x2-min.png);
@@ -216,13 +216,13 @@
     (min-resolution: 2dppx) {
     background-image: url(../images/milk2x2-min.png);
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1280px) {
     top: -220px;
     width: 335px;
     height: 335px;
     background-image: url(../images/milk3x1-min.png);
   }
-  @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
+  @media screen and (min-width: 1280px) and (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     background-image: url(../images/milk3x2-min.png);
@@ -247,7 +247,7 @@
     padding: 0 10px;
   }
   @media screen and (min-width: 1280px) {
-    max-width: 1200px;
+    max-width: 1280px;
     font-size: 16px;
     padding: 0 40px;
   }
