--- a/src/sass/layout/_how-its-made.scss
+++ b/src/sass/layout/_how-its-made.scss
@@ -37,8 +37,8 @@
 .how-its-made-main {
   margin-left: auto;
   margin-right: auto;
-  width: 320px;
-
+  // width: 320px;
+  width: 100%;
   @media screen and (min-width: 768px) {
     width: 768px;
   }
