--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -70,9 +70,11 @@
 }
 
 .product-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   @media screen and (min-width: 768px) {
-    display: flex;
-    align-items: center;
+    flex-direction: row;
     justify-content: center;
   }
 }
