--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,11 +15,8 @@
                 </ul>
             </nav>
             <div class="burger-button_wrap">
-                <button type="button" class="page-header_burger ">
-                     
-                     
-                </button>
-                <button type="button" class="page-header_button "> <span class="button-word">Buy now</span> 
+                <button type="button" class="page-header_burger"></button>
+                <button type="button" class="page-header_button" data-modal-open> <span class="button-word">Buy now</span> 
                     
                 </button>
             </div>
